<resources>
    <string name="app_name">Fitness Constructor</string>

    <!--    Bottom menu text-->
    <string name="workout_text_menu">Workouts</string>
    <string name="statistic_text_menu">Statistic</string>
    <string name="settings_text_menu">Settings</string>

    <!--    WorkoutListFragment text-->
    <string name="workout_description_text">Level: %1$s, Day: %2$d</string>
    <string name="start_workout_button_text">Start</string>
    <string name="reset_workout_button_text">Reset</string>

    <!--    WorkoutSettingsFragment text-->
    <string name="rest_sets_text">Rest time between sets</string>
    <string name="rest_exercises_text">Rest time between different exercises</string>
    <string name="week_exercises_text">Choose days and time if you want to receive notifications</string>
    <string name="save_button_text">Save</string>
    <string name="delete_button_text">Delete</string>

    <!--TODO("change when the layouts be ready")-->
    <string name="statistic_fragment">"Statistic fragment "</string>
    <string name="settings_fragment">"Settings fragment "</string>
    <string name="user">User Settings</string>

    <!--    ExerciseFragment text-->
    <string name="exercise_name_text">Exercise name</string>
    <string name="rest_name_text">Rest</string>
    <string name="steps">STEPS</string>
    <string name="time">SEC</string>
    <string name="enter_steps_you_ve_done">Enter steps you’ve done</string>
    <string name="skip_workout_button_text">Skip workout</string>
    <string name="next_exercise_button_text">Next exercise</string>
    <string name="count_1">While you can</string>

    <string name="skip_test">Skip Test</string>
    <string name="start_test">Start test</string>

    <!--    AppSettingsFragment text-->
    <string name="fitness_level">Excellent</string>
    <string name="individual_training_program">individual training program</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="hello">Thank you for choosing our app</string>
    <string name="hello_description">We will help you to choose \n individual training program \n for you.</string>
    <string name="hello_description_two">To accurately know your level \nof physical fitness, please take the special stress test.</string>
    <string name="stress_test">STRESS TEST</string>
    <string name="what_is_stress_test">The stress test is a special test \n that will determine the level of \n your physical fitness.</string>
    <string name="stress_test_description">You will need to do three exercises in sequence with no rest in between.
        \n These exercises will be: \nPush-ups, squats and running in place. \n \nEach exercise should be done \n for 30 seconds.
        \n \nAfter each exercise, sew on the number of times that you managed …</string>
    <string name="individual_training_program_description">We will help you to choose an individual training program for you.
        \nTo do this, fill in your details.\n (We don\'t save your personal information).</string>
    <string name="your_fitness_level_text">You have done a stress test. It was COOL! \n Your fitness level:</string>
    <string name="sex">\n \nSex Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="age">Age</string>
    <string name="age_19_25">19-25</string>
    <string name="age_25_35">25-35</string>
    <string name="age_35_45">35-45</string>
    <string name="age_45_55">45-55</string>
    <string name="age_55">more 55</string>
    <string name="level">Fitness Level</string>
    <string name="level_low">low</string>
    <string name="level_middle">middle</string>
    <string name="level_high">high</string>
    <string name="level_excellent">excellent</string>
    <string name="day">Day</string>
    <string name="day_description">(Please select no more than 3 days per week for training)</string>

    <!--    Week notifications text-->
    <string name="day_sunday_text">Sunday:</string>
    <string name="day_monday_text">Monday:</string>
    <string name="day_tuesday_text">Tuesday:</string>
    <string name="day_wednesday_text">Wednesday:</string>
    <string name="day_thursday_text">Thursday:</string>
    <string name="day_friday_text">Friday:</string>
    <string name="day_saturday_text">Saturday:</string>
    <string name="set_time_text">set time</string>

</resources>