<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/level"
        android:textSize="@dimen/text_size_user" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_level_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_level_low"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_low" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_level_middle"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_middle" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_level_high"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_high" />

    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/stress_test_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stress_button_text" />
</LinearLayout>