<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/exercise_name_text_view"
        style="@style/title_text_view_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_name_text" />

    <ImageView
        android:id="@+id/exercise_image"
        style="@style/exercise_image_view_style"
        android:src="@drawable/ic_no_image_block_24"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/exercise_count_text_view"
        style="@style/text_view_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="25" />

    <TextView
        android:id="@+id/exercise_type_text_view"
        style="@style/text_view_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steps" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:helperText="@string/enter_steps_you_ve_done"
        app:helperTextEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/steps_edit_text"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            tools:text="25" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>