<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_8"
    tools:context=".ui.workoutsettings.WorkoutSettingsFragment">

    <EditText
        android:id="@+id/workout_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Workout name" />

    <TextView
        android:id="@+id/appr_rest_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:text="@string/rest_sets_text" />

    <com.google.android.material.slider.Slider
        android:id="@+id/sets_time_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stepSize="5"
        android:valueFrom="10"
        android:valueTo="30"
        app:labelBehavior="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:text="@string/rest_exercises_text" />

    <com.google.android.material.slider.Slider
        android:id="@+id/exercise_time_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stepSize="10"
        android:valueFrom="30"
        android:valueTo="120"
        app:labelBehavior="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:text="@string/week_exercises_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/week_notification_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16">

        <Button
            android:id="@+id/delete_button"
            style="@style/negative_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/save_button"
            style="@style/positive_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>